--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=monitoreo-temperatura-api
 
-spring.datasource.url = jdbc:mysql://localhost:3306/monitoreotemperatura
+spring.datasource.url = jdbc:mysql://localhost:3306/monitoreotemperaturadb
 
 spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.password = dakar*2024
 spring.jpa.hibernate.ddl-auto = update
 
 server.port = 8086
