--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=monitoreo-temperatura-api
 
 spring.datasource.url = jdbc:mysql://localhost:3306/monitoreotemperaturadb
 
-spring.datasource.username = root
+spring.datasource.username = icm
 spring.datasource.password = dakar*2024
 spring.jpa.hibernate.ddl-auto = update
 
