--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=monitoreo-temperatura-api
 
-spring.datasource.url = jdbc:mysql://localhost:3306/monitoreotemperaturadb
+spring.datasource.url = jdbc:mysql://192.168.0.204:3306/monitoreotemperaturadb
 
 spring.datasource.username = icmdb
 spring.datasource.password = dakar*2024
 spring.jpa.hibernate.ddl-auto = update
 
-server.port = 8086
+server.port = 7086
